# LifeEventPredictor

./: .gitignore  COMPLIANCE_FEATURES.md  DEPLOYMENT_STATUS.md  Makefile  README.md  REFACTOR_SUMMARY.md  VISUAL_POLISH_SUMMARY.md  project_plan.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
api/: main.py  schemas.py
api/routes/: experiment.py  feedback.py  health.py  predict.py
config/: settings.yaml
data/: feedback.db  model_aspiring_affluent.joblib  model_generation_nerd.joblib  model_sticky_family_leader.joblib
data/experiments/: cohort_members.parquet  cohorts.parquet  experiment_assignments.parquet  experiment_outcomes.parquet  pathway_metrics.parquet
data/processed/: features.parquet  hypotheses.json
data/raw/: user_profiles.parquet
scripts/: __init__.py  precompute_hypotheses.py  simulate_experiment.py
src/api/: feedback.py  macro_agent.py
src/classifier/: cohort_engine.py  guardrails.py  persona_classifier.py
src/data_generator/: baseline.py  generator.py  personas.py  profiles.py
src/experiments/: __init__.py  assign.py  metrics.py  outcome_simulator.py  reweight.py  storage.py
src/features/: categorical.py  nudges.py  pipeline.py  temporal.py  wealth.py
src/models/: evaluate.py  governance.py  predict.py  train.py
src/utils/: io.py  mcc_codes.py
tests/: test_api.py  test_data_generator.py  test_experiments.py  test_features.py  test_persona_classifier.py
ui/: app.py  lib.py  onboarding.py
ui/pages/: 1_cohort_builder.py  1_decision_console.py  2_growth_engine.py  2_model_training.py  3_compliance.py
